# dt_resources

./: CMakeLists.txt  Readme.md  package.xml
configs/: mementar.yaml  ontologenius.yaml  overworld_pepper.yaml  overworld_pr2.yaml  overworld_tiago.yaml
launch/: ontologenius_mementar.launch  ontologenius_mementar_multi.launch  ontology_init.launch  ontology_setup1.launch  ontology_setup1_nl.launch  ontology_setup2_multi.launch  particle_person_tracker.launch
launch/ar_track_alvar/: ar_track_alvar_pepper.launch  ar_track_alvar_robot.launch  ar_track_alvar_tiago.launch
launch/overworld/: overworld_pepper.launch  overworld_pr2.launch  overworld_tiago.launch
launch/proximity_sensing/: proximity_sensing_pr2.launch  proximity_sensing_tiago.launch
launch/static_transform/: static_transform_pepper.launch  static_transform_pr2.launch  static_transform_tiago.launch
mesh/furnitures/: red_box.dae  (+6 more)
ontologies/: HtnDescription.owl  actions_emulation.owl  dt_humans.owl  dt_objects.owl  dt_setup_1.owl  dt_setup_2.owl
scripts/: scan.sh
tags/: B5.xml  BBCG.xml  BBTG.xml  BGCB.xml  BGCG.xml  BGTB.xml  BGTG.xml  C1.xml  C2.xml  C3.xml  C4.xml  C5.xml  GBCB.xml  GBCG.xml  GBTB.xml  GBTG.xml  GGCB.xml  GGTB.xml  MarkerData_150.xml  MarkerData_151.xml  MarkerData_152.xml  MarkerData_206.xml  MarkerData_212.xml  MarkerData_230.xml  MarkerData_236.xml  MarkerData_254.xml  MarkerData_42.xml  MarkerData_43.xml  MarkerData_44.xml  MarkerData_45.xml  cube_b_1.xml  cube_b_2.xml  cube_g.xml  cube_r_1.xml  cube_r_2.xml  place.xml  red_box.xml  round_table.xml  table.xml  table_1.xml  (+5 more)
(+10 files in other folders)
